# xauusdt-trading-platform

./: .cred-test  .env.example  .gitignore  .push-test  Dockerfile  Dockerfile.smoke-test  LICENSE  README.md  debug_test.db  debug_test2.db  docker-compose.smoke-test.yml  docker-compose.yml  pyproject.toml  smoke_test.db
.github/workflows/: ci.yml
docs/: strategy_v2.md
docs/reports/: PROJECT-DATA-007-OKX-MIGRATION.json  SMOKE_TEST_TEMPLATE.md  ablation_BACKTEST-005.json  ablation_BACKTEST-005.md  baseline_20260715_121609.json  baseline_20260715_121609.md  baseline_20260715_180536.md  baseline_20260716_021728.json  baseline_20260716_021728.md  baseline_20260716_022141.json  baseline_20260716_022141.md  baseline_20260716_025951.md  baseline_20260716_030831.json  baseline_20260716_030831.md  baseline_20260716_030942.md  baseline_BACKTEST-004.json  data_quality_009B.json  (+27 more)
migrations/: 0003_candles.sql
scripts/: create_test_db.py
smoke_test_data/: smoke_test_report.json  smoke_test_report.md
tests/: test_bitget_candles.py  test_improved_exit_model.py
tools/: check_data.py  compare_candles.py  create_tables.py  debug_backfill.py  fix_time.sh  init_pg.py  migrate_symbol.py  run_ablation_analysis.py  run_backfill.py  run_backtest_011.py  run_backtest_012_report.py  run_backtest_012_walk_forward.py  run_baseline_backtest.py  run_data_quality.py  run_diagnostics.py  run_entry_diagnostics.py  run_exit_analysis.py  run_improved_exit_comparison.py  run_robustness_test.py  run_v1_vs_v2_comparison.py  run_v2_backtest.py  smoke_test_okx_collector.py  test_baseline.py  validate_candles.py  validate_okx_candles.py  verify_bitget_api.sh
(+62 files in other folders)
