[project]
name = "xauusdt-trading-platform"
version = "0.1.0"
description = "XAUUSDT futures trading platform foundation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ming", email = "ming@example.com" }]
keywords = ["trading", "xauusdt", "futures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "aiosqlite>=0.22.1",
    "pytest-asyncio>=1.4.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
xauusdt = "xauusdt.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/xauusdt"]
